Traefik/Enable-Dashboard/ingress-dashboard.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
  name: traefik-ingress
  namespace: traefik
spec:
  ingressClassName: traefik
  rules:
  - host: traefik.homelab
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard-service
            port:
              number: 9000
        path: /api
        pathType: Prefix
  - host: traefik.homelab
    http:
      paths:
      - backend:
          service:
            name: traefik-dashboard-service
            port:
              number: 9000
        path: /dashboard
        pathType: Prefix
